--- a/ProjectTemplate/Web.config
+++ b/ProjectTemplate/Web.config
@@ -4,9 +4,18 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <appSettings>
+  </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="true" targetFramework="4.6.1">
+      <assemblies>
+        <add assembly="System.ComponentModel" />
+        <add assembly="System.Configuration.Install, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Drawing.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="System.Transactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.webServer>
